--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,700&display=swap" rel="stylesheet">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="header">
@@ -14,7 +15,7 @@
     </div>
     <div class = "main">
         <div id = "hub">
-            <button class = "bar" name = ><i class="uil uil-bars"></i></div>
+            <button class = "bar" name = "bar" onclick="sorry();"><i class="uil uil-bars"></i></div>
         </div>
         <div class = "section">
             <div class = "search">
