--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
                     <input name="s" id="searchinp" placeholder="Введите нужное Вам слово" type="search">
                 </form>
             </div>
-            <div class = "article"></div>
+            <div class = "article">
+                <div class="title">
+                    <div class = "Bpoint"></div><h2>Название статьи</h2>
+                </div>
+                <div class = "textBox">
+                    <div class="content"><div id="im1"></div></div>
+                    <p>Многа заумного текста</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
