--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <h1>"Англоword"</h1>
-        <h3>-место, где вы найдёте замену англицизмам.</h3>
+        <h3> — место, где вы найдёте замену англицизмам.</h3>
     </div>
     <div class = "main">
         <div id = "hub">
@@ -26,7 +26,7 @@
             </div>
             <div class = "article">
                 <div class="title">
-                    <div class = "Bpoint"></div><h2>Название статьи</h2>
+                    <h2>Название статьи</h2>
                 </div>
                 <div class = "textBox">
                     <div class="content"><div id="im1"></div></div>
