--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
         <div class = "section">
             <div class = "search">
                 <form action="" method="get">
-                    <button id="searchButton" name="confirm" type="submit"><i class="uil uil-search"></i></button>
+                    <button id="searchButton" name="confirm" type="submit" onclick = "tryToFind(s.value)"><i class="uil uil-search"></i></button>
                     <input name="s" id="searchinp" placeholder="Введите нужное Вам слово" type="search">
                 </form>
             </div>
