--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <h1>"Англоword"</h1>
-        <h3> — место, где вы найдёте замену англицизмам.</h3>
+        <h3> — место, где вы найдёте замену англицизмам</h3>
     </div>
     <div class = "main">
         <div id = "hub">
@@ -26,8 +26,10 @@
                 </form>
             </div>
             <div class = "article">
+                
                 <div class="title">
-                    <h2>Название статьи</h2>
+                    <div class="Bpoint"></div>
+                    <h2>Роль англицизмов в современном русском языке</h2>
                 </div>
                 <div class = "textBox">
                     <div class="content"><div id="im1"></div></div>
