--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Homepage</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -9,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,700&display=swap" rel="stylesheet">
     <script src="script.js"></script>
 </head>
-<body>
     <div class="header">
         <h1>"Англоword"</h1>
         <h3> — место, где вы найдёте замену англицизмам</h3>
