--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,700&display=swap" rel="stylesheet">
     <script src="script.js"></script>
 </head>
+<body>
+
     <div class="header">
         <h1>"Англоword"</h1>
         <h3> — место, где вы найдёте замену англицизмам</h3>
     </div>
-    <div class = "main">
-        <div id = "hub">
-            <button class = "bar" title = "bar" onclick="sorry();"><i class="uil uil-bars"></i></div>
+
+    <main>
+
+        <div class = "hub">
+            <button class = "bar" title = "bara" onclick="sorry();" type = "button"><i class="uil uil-bars"></i></div>
         </div>
+
         <div class = "section">
             <div id = "search">
                 <form action="" method="get">
@@ -37,17 +42,17 @@
                     <p>равносильное ему русское слово, — значит</p>
                     <p>оскорблять и здравый смысл, и здравый вкус».</p>
                     <p>К.Г.Белинский</p>
-                    <p> </p>
                     <p>Сегодня мы довольно часто слышим такие слова или словосочетания, как «тайм-менеджмент», «менеджер», «коуч», «бьюти-блогер». Эти слова называются англицизмами, активно использующимися русскоязычным населением в СМИ, работе и повседневной жизни: в некоторых печатных изданиях журналов, газет, каких-либо книг, а также фильмах и музыке. Подобные заимствования считаются одним из возможных способов развития русского языка, ведь ему необходимо совершенствоваться, отвечая на новые потребности общества. Причиной такого явления в лексике, как иноязычные заимствования признается, в первую очередь, отсутствие соответствующего термина в языке.
                         Темой данного исследования является определение роли слов, заимствованных из английского языка. В качестве объекта исследования послужили лексические единицы английского происхождения и их производные. Субъект данного исследования - явление заимствования в современном русском языке.
                         На рассмотрении в данной работе также будет проблема излишнего заимствования в современной русской речи, СМИ и других информационных пространствах, значительно подверженных «англотизации», связанной с Господством США на мировой арене, преобладании объектов западной культуры в современной жизни.
                         Но действительно ли данная проблема является очень серьезной, или же подобное явление естественно, и оно не является прямой угрозой самобытности русского языка?
                         Цель данного исследования - определение роли англицизмов в повседневной русской речи и конкретизация проблемы излишнего заимствования англицизмов.
                         Задачи данного исследования:
-                    </p>
+                        </p>
+                    
                 </div>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
