--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                         Цель данного исследования - определение роли англицизмов в повседневной русской речи и конкретизация проблемы излишнего заимствования англицизмов.
                         Задачи данного исследования:
                         </p>
+                        <ol>
+                            <li><p>выявление причин заимствований;</p></li>
+                            <li><p>анализ способов деформации и образования англицизмов;</p></li>
+                            <li><p>проведение опроса людей разных социальных групп для более качественного анализа проблемы англоязычных заимствований;</p></li>
+                            <li><p>формирование обновленного сборника англицизмов.</p></li>
+                        </ol>
                     
                 </div>
             </div>
